<resources>
    <string name="app_name">Github User</string>
    <string name="user">user</string>
    <string name="name">Name</string>
    <string name="search_user">SEARCH USER</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="isi_username">username fill</string>
    <string name="isi_nama">name fill</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_follower_fragment">Ini Fragment Follower</string>
    <string name="content_fragment_following">Ini Fragment Following</string>
    <string name="title_follower">Follower</string>
    <string name="title_following">Following</string>
    <string name="username_follower">username follower</string>
    <string name="username_following">username following</string>
    <string name="colon">:</string>
    <string name="progress">waiting ...</string>
    <string name="title">Github User</string>
    <string name="location">Location</string>
    <string name="isi_location">Location fill</string>
    <string name="change_language_setting">Change Language Setting</string>
    <string name="detail_user">Detail User</string>
</resources>
